// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PriceDisplay UI Happy case renders FREE when value is zero 1`] = `
Object {
  "processor": Any<Object>,
  "strings": Array [
    "FREE",
  ],
  "type": "html",
  "values": Array [],
}
`;

exports[`PriceDisplay UI Happy case renders currency symbol and price value 1`] = `
Object {
  "processor": Any<Object>,
  "strings": Array [
    "",
    "",
    "",
  ],
  "type": "html",
  "values": Array [
    "£",
    "9.99",
  ],
}
`;

exports[`PriceDisplay UI Partial case renders currency symbol with &middot; when value is undefined 1`] = `
Object {
  "processor": Any<Object>,
  "strings": Array [
    "",
    "&middot;",
  ],
  "type": "html",
  "values": Array [
    "£",
  ],
}
`;

exports[`PriceDisplay UI Partial case renders currencyCode; when currency symbol is undefined 1`] = `
Object {
  "processor": Any<Object>,
  "strings": Array [
    "",
    "",
    "",
  ],
  "type": "html",
  "values": Array [
    "9.99",
    "idk",
  ],
}
`;
